basic git code commands

--- a/HW-2-first-lesson-github/homework-2.html
+++ b/HW-2-first-lesson-github/homework-2.html
@@ -7,14 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    git config --global user.name blabla - ввод имени пользователя
-
+<details> git config --global user.name blabla - ввод имени пользователя</details>
+   
     git config --global user.email blabal@bla - ввод эмайла пользователя
-
     git init - создает пустой репозиторий
-
     git status - проверяет новые или измененные файлы
-    
     git add - добавляет файлы в коммит. Используем с "." или "*" чтоб добавить все файлы, чтоб добавить один файл пишем его имя и расширение
     git commit - выполняем коммит изменения(текущий слепок проэкта нужно сохранить)
     git log перечисляет коммиты, сделанные в репозитории в обратном к хронологическому порядке — последние коммиты находятся вверху.
