basic git code commands

--- a/HW-2-first-lesson-github/homework-2.html
+++ b/HW-2-first-lesson-github/homework-2.html
@@ -7,8 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-<details> git config --global user.name blabla - ввод имени пользователя</details>
-   
+    git config --global user.name blabla - ввод имени пользователя
     git config --global user.email blabal@bla - ввод эмайла пользователя
     git init - создает пустой репозиторий
     git status - проверяет новые или измененные файлы
