--- a/HW-2-first-lesson-github/homework-2.html
+++ b/HW-2-first-lesson-github/homework-2.html
@@ -4,28 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My home work</title>
 </head>
 <body>
-    git config --global user.name blabla - ввод имени пользователя
-    git config --global user.email blabal@bla - ввод эмайла пользователя
-    git init - создает пустой репозиторий
-    git status - проверяет новые или измененные файлы
-    git add - добавляет файлы в коммит. Используем с "." или "*" чтоб добавить все файлы, чтоб добавить один файл пишем его имя и расширение
-    git commit - выполняем коммит изменения(текущий слепок проэкта нужно сохранить)
-    git log перечисляет коммиты, сделанные в репозитории в обратном к хронологическому порядке — последние коммиты находятся вверху.
-    git checkout - позволяет перемещаться между ветками, созданными командой git branch 
-    git branch - перечисляет ветки, создает новые, удаляет и переименовывает их (менеджер веток).
-    git push (origin master) - пушит или отправляет в репозиторий слепки проэкта
-    git pull - извлекает и загружает содержимое из удаленного репозитория и немедленно обновляет локальный репозиторий этим содержимым.
-    git merge - объединяет несколько последовательностей коммитов в общую историю.
-    git clone - Клонирование локального или удаленного репозитория. Клонирование чистого репозитория. 
-    .gitignore определяет и защищает от случайного добавления в репозиторий файлов, которых там видеть не хотим
-                                    Advanced 
-    git revert - выясняет какие изменения нужно отменить, отменяет их и создаёт новый коммит, в котором эти изменения проведены.
-    git reset - команда, используемая для отмены локальных изменений в репозитории Git. 
-    git rebase - переносит  изменения из одной ветки в другую, сжимает все изменения в один «патч» затем интегрирует патч в целевую ветку.
-    git cherry-pick - берёт изменения, вносимые одним коммитом, и пытается повторно применить их в виде нового коммита в текущей ветке.
-    git stash - помещает текущие изменения, которые выполнили в файлах, в отдельное хранилище, и возвращает файлы к исходному состоянию.
-</body>
-</html>
+    <p><ul>
+    <li>git config --global user.name blabla - ввод имени пользователя</li>
+    <li>git config --global user.email blabal@bla - ввод эмайла пользователя</li>
+    <li>git init - создает пустой репозиторий</li>
+    <li>git status - проверяет новые или измененные файлы</li>
+    <li>git add - добавляет файлы в коммит. Используем с "." или "*" чтоб добавить все файлы, чтоб добавить один файл пишем его имя и расширение</li>
+    <li>git commit - выполняем коммит изменения(текущий слепок проэкта нужно сохранить)</li>
+    <li>git log перечисляет коммиты, сделанные в репозитории в обратном к хронологическому порядке — последние коммиты находятся вверху</li>
+    <li>git checkout - позволяет перемещаться между ветками, созданными командой git branch </li>
+    <li>git branch - перечисляет ветки, создает новые, удаляет и переименовывает их (менеджер веток)</li>
+    <li>git push (origin master) - пушит или отправляет в репозиторий слепки проэкта</li>
+    <li>git pull - извлекает и загружает содержимое из удаленного репозитория и немедленно обновляет локальный репозиторий этим содержимым.</li>
+    <li>git merge - объединяет несколько последовательностей коммитов в общую историю.</li>
+    <li>git clone - Клонирование локального или удаленного репозитория. Клонирование чистого репозитория</li></ul>
+   <p> gitignore определяет и защищает от случайного добавления в репозиторий файлов, которых там видеть не хотим</p>
+    </p>
+                                    <p><bold>Advanced</bold> 
+    <ul><li>git revert - выясняет какие изменения нужно отменить, отменяет их и создаёт новый коммит, в котором эти изменения проведены.</li>
+        <li>git reset - команда, используемая для отмены локальных изменений в репозитории Git</li>
+         <li>git rebase - переносит  изменения из одной ветки в другую, сжимает все изменения в один «патч» затем интегрирует патч в целевую ветку</li>
+        <li>git cherry-pick - берёт изменения, вносимые одним коммитом, и пытается повторно применить их в виде нового коммита в текущей ветке.</li>
+        <li>git stash - помещает текущие изменения, которые выполнили в файлах, в отдельное хранилище, и возвращает файлы к исходному состоянию.</li></ul>
+    </p>
+    </ul>
+    </body>
+    </html>
