--- a/HW-2-first-lesson-github/homework-2.html
+++ b/HW-2-first-lesson-github/homework-2.html
@@ -29,6 +29,7 @@
          <li>git rebase - переносит  изменения из одной ветки в другую, сжимает все изменения в один «патч» затем интегрирует патч в целевую ветку</li>
         <li>git cherry-pick - берёт изменения, вносимые одним коммитом, и пытается повторно применить их в виде нового коммита в текущей ветке.</li>
         <li>git stash - помещает текущие изменения, которые выполнили в файлах, в отдельное хранилище, и возвращает файлы к исходному состоянию.</li></ul>
+        <script src="key.png"></script>
     </p>
     </ul>
     </body>
