--- a/HW-3-css/index.html
+++ b/HW-3-css/index.html
@@ -30,7 +30,7 @@
 <div class="box2">
 
     <div class="background-image">
-        <img src="cookies.png" alt="cookies">
+        <img src="cookies.png" width="35px" height="35px" alt="cookies">
     </div>
 
     <p class="text3">We use cookies to ensure that we give you the best experience on our website. 
