--- a/HW-10-animation/index.html
+++ b/HW-10-animation/index.html
@@ -8,23 +8,23 @@
     <title>HW-10-Animation</title>
 </head>
 <body>
-    <div class="body">
-        <div class="sword">
-            <div class="sword_body">
-                <div class="sword-center"></div>
+    <main>
+        <section class="box1">
+            <div class="sword">
+                <div class="sword-1"></div>
             </div>
-        </div>   
-</section>
-<section class="Down_Ball">
-    <div class="balls">
-        <div class="ball"></div>
-        <div class="ball"></div>
-        <div class="ball"></div>
-        <div class="ball"></div>
-        <div class="ball"></div>
-        <div class="ball"></div>
-        <div class="ball" ></div>    
-    </div>
-</section>
+        </section>
+        <section class="circle">
+            <div class="circle-box">
+            <div class="circle-1"></div>
+            <div class="circle-2"></div>
+            <div class="circle-3"></div>
+            <div class="circle-4"></div>
+            <div class="circle-5"></div>
+            <div class="circle-6"></div>
+            <div class="circle-7"></div>
+            </div>
+        </section>
+    </main>  
 </body>
 </html>
