--- a/HW-10-animation/index.html
+++ b/HW-10-animation/index.html
@@ -10,8 +10,8 @@
 <body>
     <main>
         <section class="box1">
-            <div class="sword">
-                <div class="sword-1"></div>
+            <div class="burger">
+                <div class="burger-1"></div>
             </div>
         </section>
         <section class="circle">
